--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="./css/main.css">
-    <title>PreEntrega2</title>
+    <title>DW - PreEntrega2</title>
 </head>
 <body>
 
@@ -175,6 +175,7 @@
         <div><img class="redesFocus" src="./images/instagram.png" alt="ig"></div>
         <div><img class="redesFocus" src="./images/facebook.png" alt="fb"></div>
         <div><img class="redesFocus" src="./images/whatsapp.png" alt="wa"></div>
+        <div><img class="redesFocus" src="./images/github.png" alt="wa"></div>
       </div>
 
       <div class="footerLogo">
