Agregué icono de Github con link al repo mismo

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         <div><img class="redesFocus" src="./images/instagram.png" alt="ig"></div>
         <div><img class="redesFocus" src="./images/facebook.png" alt="fb"></div>
         <div><img class="redesFocus" src="./images/whatsapp.png" alt="wa"></div>
-        <div><img class="redesFocus" src="./images/github.png" alt="wa"></div>
+        <div><a href="https://github.com/JManu4/des-web" target="_blank"><img class="redesFocus" src="./images/github.png" alt="gh"></a></div>
       </div>
 
       <div class="footerLogo">
