--- a/sites/clas3.html
+++ b/sites/clas3.html
@@ -128,6 +128,7 @@
         <div><img class="redesFocus" src="../images/instagram.png" alt="ig"></div>
         <div><img class="redesFocus" src="../images/facebook.png" alt="fb"></div>
         <div><img class="redesFocus" src="../images/whatsapp.png" alt="wa"></div>
+        <div><a href="https://github.com/JManu4/des-web" target="_blank"><img class="redesFocus" src="./images/github.png" alt="gh"></a></div>
       </div>
 
       <div class="footerLogo">
